--- a/Ust'-Ilimsk.mw
+++ b/Ust'-Ilimsk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 82,455
  | Voz' = 2017
  | Pind = 229
- | Fail = Ust-Ilimsk1.jpg
+ | Fail = Gorod Ust-Ilimsk.jpg
  | Pämez' = Vakil' Tulubaev<br />(2008−2010.<br />sügüz'ku 2015—)
  | Telefonkod = +7-39535-xx-xxx
  | Avtokod = 38. 85. 138
@@ -25,14 +25,25 @@ Lidn sijadase Angar-jogen i [[Ust'-Ilimskan vezivaradim]]en randoil, 207..320 m 
 Ust'-Ilimsk om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 86 610 ristitud. Kaikiš suremb ristitišt oli 114 tuh. eläjid vl 1992. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid da časoun' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 86 610 ristitud. Kaikiš suremb ristitišt oli 114 tuh. eläjid vl 1992.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid da časoun' oma olmas lidnas.
 
 Professionaližen opendusen aluzkundad: Ust'-Ilimskan mectegimištoližiden tehnologijoiden tehnikum, saraktehnologijoiden tehnikum, Baikalan valdkundaližen universitetan (Irkutsk) filial, Irkutskan energetižen kolledžan filial.
 
 == Ižanduz da transport ==
-Lidn šingotase järedal GES:al (sadametraine padosein) i lämuzenergetikal, mecan ümbriradmižel pilindmaterialoihe, cellülozbumagaižel tehmižel, [[kivihil'|kivihilen]] samižel, mugažo leibtegim radab.
+Ust'-Ilimsk šingotase järedal GES:al (sadametraine padosein) i lämuzenergetikal, mecan ümbriradmižel pilindmaterialoihe, cellülozbumagaižel tehmižel, [[kivihil'|kivihilen]] samižel, mugažo leibtegim radab.
 
 Avtobusad, kiruhtramvaid da taksid oma kundaližeks transportaks. Regionaline civiline lendimport (''UIK / УТК'') sijadase 17 km lodeheze lidnan keskusespäi, tehtas reisid Irkutskhasai.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Church of the Theotokos Seeker of the Perishing Ust-Ilimsk.JPG|Jumalanmaman «Pölištunuziden aznoičend»-jumalaižen časoun', vn 2007 nägu
+Ust-Ilimsk Hydroelectric Power Station.jpg|Ust'-Ilimskan gidroelektrostancijan padosein vl 2020
+Build fBGUEP Ust-Ilimsk.JPG|Baikalan valdkundaližen universitetan (Irkutsk) filial vl 2009 (vll 2002−2015 üläopendusen aluzkundan nimituz oli Baikalan ekonomikan da oiktusen valdkundaline universitet)
+Ust-Ilimsk tram line.jpg|Tramvain jono vl 2020
+Аэропорт Усть-Илимск.jpg|Ust'-Ilimsk-lendimportan perron vl 2000 vai 2001
+</gallery>
 
 == Irdkosketused ==
 * [http://www.duma38.ru/ Lidnan Duman oficialine sait (''duma38.ru'').] {{ref-ru}}
