--- a/Kirensk.mw
+++ b/Kirensk.mw
@@ -1,14 +1,14 @@
 {{Eländpunkt
  | Nimi = Kirensk<br />Киренск
  | Lidnanznam = Coat of Arms of Kirensk (Irkutsk oblast) (1790).png
- | Flag =
+ | Flag = Flag of Kirensk.svg
  | Lidnanznam text = Kirenskan lidnanznam
- | Flag text =
+ | Flag text = Kirenskan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 11,310
  | Voz' = 2017
  | Pind = 21
- | Fail =
+ | Fail = Мемориал Аляска-Сибирь в г. Киренск.jpg
  | Pämez' = Nikolai Černih<br />(sügüz'ku 2016—)
  | Telefonkod = +7-39568-xx-xxx
  | Avtokod = 38. 85. 138
@@ -29,10 +29,12 @@ Klimat om terav kontinentaline. Heinkun lämuz om +18,3 C°, vilukun — −26,6
 Kaks' pen't žilod da kuz' küläd mülüdas lidnankundha Kirenskan ližaks. Lidnankundan pind — 6 149,88 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 12 640 ristitud, lidnankundan — 13 655 ristitud, rajonan kaks' koumandest. Kaikiš suremb lidnan ristitišt oli enamba 16 tuhad eläjid vozil 1979−1996 (16 500 rist. vl 1992). Vl 2017 kaik 12 257 ristitud elihe lidnankundas. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan londuseližen kuvandusen jumalanpert' om olmas lidnas vspäi 1805.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 12 640 ristitud, lidnankundan — 13 655 ristitud, rajonan kaks' koumandest. Kaikiš suremb lidnan ristitišt oli enamba 16 tuhad eläjid vozil 1979−1996 (16 500 rist. vl 1992). Vl 2017 kaik 12 257 ristitud elihe lidnankundas.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan londuseližen kuvandusen jumalanpert' om olmas lidnas vspäi 1805.
 
 == Ižanduz ==
-Lidn šingotase jogiportal, mecan varhapanendal da ümbriradmižel (pilindmaterialad), leibtegimel, om kivivoin tedištelendan bazaks. Kirenskan professionaliž-pedagogine kolledž om opendusen aluzkundaks.
+Kirensk šingotase jogiportal, mecan varhapanendal da ümbriradmižel (pilindmaterialad), leibtegimel, om kivivoin tedištelendan bazaks. Kirenskan professionaliž-pedagogine kolledž om opendusen aluzkundaks.
 
 Regionaline civiline Kirensk-lendimport (latin. ''KCK'' / kir. ''КРН'') sijadase 3 km päivlaskmha lidnaspäi. Tehtas reisid Irkutskha da edahaižihe rajonkeskusihe, mugažo punolendimel, aviaedheotand kogoneb 14 lendimportaspäi da lendimlavaspäi.
 
