--- a/Sajansk.mw
+++ b/Sajansk.mw
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vn 1970 22. päiväl sulakud kuti ''Uz' Zim-žilo'' ({{lang-ru|Новая Зима}}) sauvomha elektrohimižkombinatad Ziman [[keitandsol]]an löudmižsijanno. Vn 1975 vilukus kätihe ''Sajansk-radnikžiloks'', nimitihe [[Päivnouzmaine Sajan]]-mägisel'gan mödhe. Radnikžilo sai lidnan statusad vn 1985 elokus, alištub agjan tobmudele oikti.
 
-Lidn šingotase [[polivinilhlorid]]an tehmižel i sömtegimištol (kanalihafabrik, maidkombinat).
+Sajansk šingotase [[polivinilhlorid]]an tehmižel i sömtegimištol (kanalihafabrik, maidkombinat).
 
 == Geografijan andmused ==
 Lidn sijadase [[Ok (Angaran ližajogi)|Okanjogen]] molembil randpolil (lankteb Bratskan vezivaradimhe, [[Angar (jogi)|Angaran]] hurapol'ne bassein, {{lang-ru|Ока}}, {{lang-bua|Аха гол}}), 550 m ü.m.t. keskmäižel korktusel. Elänfartalad (Ok-jogen oiged randpol') oma saudud 12 kilometras himižes tegimespäi (hura randpol'). Matkad [[Irkutsk]]hasai om 245 km suvipäivnouzmha orhal vai 280 km avtotedme. Lähembaine lidn da [[Transsib]]an stancii om [[Zim]] 21 km suvhe orhal, 24 km avtotedme vai Okan ülezjogen. Ühesakilometrine sarak ühtenzoitab lidnad «Sibir'»-trassanke (R-255).
@@ -30,6 +30,12 @@ Sajansk om lidnümbrikon üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 40 800 ristitud. Kaikiš suremb ristitišt oli 47 500 eläjid vl 1996. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Jumalanmaman päjumalanpert' om saudud vll 1993−2003.
 
 Professionaližen opendusen aluzkundad: Sajanskan himižtehnologijan tehnikum, medicinine kolledž i ekonomikan kolledž.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Саянск фонтан.jpg|Fontan avaidusen jäl'ghe (2013)
+Петр и Феврония.jpg|Phh. Pedroin i Fevronijan jumalaine ZAGS:an palakundan vaste (2016)
+</gallery>
 
 == Irdkosketused ==
 * [http://www.dumasayansk.ru/ Lidnan Duman oficialine sait (''dumasayansk.ru'').] {{ref-ru}}
