Tühjitadud toižetuz 146980, kudamban tegi АнИгМа (arutelu) - well, we got two identical pictures, for what?

--- a/Orlova_Lübov'.mw
+++ b/Orlova_Lübov'.mw
@@ -1,5 +1,5 @@
 {{Personalii}}
-[[Fail:Lyubov Petrovna Orlova.png|thumb|left|250px|Lübov' Orlova «Cirk»-fil'mas, 1930-nded voded.]]
+[[Fail:Ljubow Orłowa.JPG|thumb|left|250px|Lübov' Orlova «Cirk»-fil'mas, 1930-nded voded.]]
 '''Lübov' Petrovna Orlova ''' ({{lang-ru|Любовь Петровна Орлова}}; sünd. [[11. uhoku]] [[1902]], [[Zvenigorod]], [[Moskvan gubernii]], [[Venälaine imperii]] — kol. [[26. viluku]] [[1975]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli tutab nevondkundaline aktris, pianist, pajatai da kargnik. [[NSTÜ:n rahvahan artist]] (1950).
 
 Orlova om bajarišton rodul. Aktrisan al'mamater om Moskvan teatraline tehnikum (nüg. [[GITIS]]), opendusen voded — 1922−1925.
