--- a/Bratsk.mw
+++ b/Bratsk.mw
@@ -33,9 +33,23 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 246 319 ristitud. 
 Professionaližen opendusen aluzkundad: Bratskan valdkundaline universitet, 4 tehnikumad i 5 kolledžad.
 
 == Ižanduz ==
-Lidn šingotase elektroenergetikal, alüminijantegimel, raudühthesuladusiden tegimel, cellülozbumagaižel tegimištol, sauvondmaterialiden edheotandoil (pilindmaterialad, faner, raudbeton, metalližkonstrukcijad, keradajad pertid) i sömtegimištol (leib, jomižed), mugažo lämbituzmašiništon edheotand radab.
+Bratsk šingotase elektroenergetikal, alüminijantegimel, raudühthesuladusiden tegimel, cellülozbumagaižel tegimištol, sauvondmaterialiden edheotandoil (pilindmaterialad, faner, raudbeton, metalližkonstrukcijad, keradajad pertid) i sömtegimištol (leib, jomižed), mugažo lämbituzmašiništon edheotand radab.
 
 Avtobusad, trolleibusad da taksid oma kundaližeks transportaks lidnas, mugažo jogistancii radab kezaaigan. Avtoümbärte mäneb lidnan päivlaskmaižen i pohjoižen röunanno. Rahvahidenkeskeine soda- da civiline Bratsk-lendimport (''BTK / БРС'') sijadase Bratskan rajonan territorijal, 3 km pohjoižröunaspäi, tehtas reisid Venäman lähembaižihe järedoihe lidnoihe i Moskvha.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Братск. Здание городской Думы.jpg|Lidnan Duman i administracijan sauvuz (2017)
+Памятник Наймушину ночь.jpg|Muštnik Ivan Naimušinale (GES:an ezmäine pämez')
+ОСЗ.jpg|Mikoi-arhangelan jumalanpert' Angaran küläs, vn 2016 nägu
+Bratsk Aluminium Smelter 2.jpg|Bratskan alüminijantegim vl 2017 ([[RUSAL]] Bratsk)
+Bratsk Hydroelectric Power Station in october.jpg|Bratskan gidroelektrostancijan padosein vl 2012, nägunke Energetik-mikrorajonha
+30 г. Братск. Диабазовый карьер неподалёку от ГЭС.jpg|Diabazkar'jer läz GES:ad vl 2005
+Братский государственный университет.jpg|Bratskan valdkundaline universitet, 3. korpus (2010)
+Bratsk, Irkutsk Oblast, Russia - panoramio (19).jpg|Čomamahtoiden pert'kulu (2010)
+Братский драматический театр.jpg|Bratskan dramteatr (2017)
+Bratsk Airport (1).jpg|Bratsk-lendimportan sauvuz vl 2012
+</gallery>
 
 == Irdkosketused ==
 * [http://www.dumabratsk.ru/ Lidnan Duman oficialine sait (''dumabratsk.ru'').] {{ref-ru}}
