--- a/Irkutsk.mw
+++ b/Irkutsk.mw
@@ -9,7 +9,7 @@
  | Voz' = 2017
  | Pind = 277
  | Fail = Irkutsk Collage.png
- | Pämez' = Dmitrii Berdnikov<br />(keväz'ku 2015—)
+ | Pämez' = Ruslan Bolotov<br />(semendku 2020—)
  | Telefonkod = +7-3952-xxx-xxx
  | Avtokod = 38. 85. 138
  | Aigvö = [[UTC]]+8 ([[MSK]]+5)
@@ -27,12 +27,28 @@ Eländpunktan aluz om pandud vl 1661 kuti ''Jandašan lidnuz'' ({{lang-ru|Янд
 == Geografijan andmused ==
 Lidn sijadase [[Angar (jogi)|Angar]]-jogen molembil randoil [[Irkut (jogi)|Irkut]]-jogensun sijas, Angar-jogi läbitab lidnad suvipäivnouzmaspäi lodeheze. Lidnan keskuz seižub 440 m korktusel valdmeren pindan päl. Matkad [[Baikal]]an randalesai om 66 km päivnouzmha. Lähembaižed [[Angarsk]]- (lodeheze) i [[Šelehov]]- (suvipäivlaskmha) lidnad mülüdas Irkutskan aglomeracijha.
 
-Irkutsk jagase 4 administrativižhe ümbrikho, ičeze administracijoidenke. Jagand koumhe ümbrikho (Oigedrandaline, Hurarandaline i Keskuzümbrik) om vaiše planoiš vspäi 2015. Lidn om lidnümbrikon üks'jäine eländpunkt.
+Irkutsk jagase nelläks administrativižeks ümbrikoks, ičeze administracijoidenke. Jagand koumeks ümbrikoks (Oigedrandaline, Hurarandaline i Keskuzümbrik) om vaiše planoiš vspäi 2015. Lidn om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 587 891 ristitud. Kaikiš suremb ristitišt oli 641 tuhad eläjid vl 1991. Irkutsk om lidnaglomeracijan keskuz 1,1 mln eläjidenke (kaks' videndest agjan ristitištos vl 2016).
 
 Rahvahad (vn 2010 rahvahanlugemine, enamba 0,4%): [[venälaižed]] — 85,3%, [[burätalaižed]] — 2,2%, [[ukrainalaižed]] — 1,0%, [[totarlaižed]] — 0,7%, [[azerbaidžanlaižed]] — 0,4%, [[kirgizlaižed]] — 0,4%, [[armenijalaižed]] — 0,4%, toižed rahvahad — 2,6%, rahvahuden ozutandata — 7,0%.
+
+Lidnan edeline pämez' om Dmitrii Berdnikov (keväz'ku 2015 — keväz'ku 2020).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Administration of Irkutsk.jpg|Lidnan Duman i administracijan sauvuz (2011)
+Бывший банк ссср (иркутское отделение).JPG|[[Venäman Keskuzbank]]an Irkutskan palakund (2013)
+Airbus A319-114, S7 - Siberia Airlines AN1620328.jpg|Lidnan ühthine nägu vl 2008
+Казанская церковь улица Баррикад, 34 фасад.jpg|Jumalanmaman Kazanin jumalaižen päjumalanpert' (ortodoksine hristanuskond), vn 2018 nägu
+Здание ИАЗ.JPG|Irkutskan aviategimen tulend vl 2015
+Vost.-Sib. zh.d.jpg|Päivnouzmaiž-sibirižen raudten päfater vl 2006
+Irkutsk State University 2019-08.jpg|Irkutskan valdkundaližen universitetan üks' korpusoišpäi (2019)
+Art museum.JPG|Irkutskan agjan čomamahtoine muzei V. Sukačovan nimed (2010)
+Иркутск, Ангара.jpg|Irkutsk-Passažirskii-päraudtestancijan kompleks Angaran randal vl 2016
+Irkutsk airport terminal and apron.jpg|Irkutsk-lendimportan tatanmaižiden jonoiden terminal vl 2019
+</gallery>
 
 == Tetabad sündnuded ==
 * [[Turčaninov Pötr|Pötr Turčaninov]] (1932−2009) — oli venälaine mez', Nevondkundaližen Ühtištusen i Venäman voimujupirdai da grafikanpirdai.
