--- a/Čerömhovo_(lidn).mw
+++ b/Čerömhovo_(lidn).mw
@@ -9,7 +9,7 @@
  | Voz' = 2017
  | Pind = 114.4
  | Fail = Подъём ул. Некрасова.jpg
- | Pämez' = Vadim Semönov (2006—)
+ | Pämez' = Vadim Semönov<br />(2006—)
  | Telefonkod = +7-39546-xx-xxx
  | Avtokod = 38. 85. 138
  | Aigvö = [[UTC]]+8 ([[MSK]]+5)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1772 kuti ''Čeremhovskoje-žilo'' ({{lang-ru|село Черемховское}}) Moskvan traktal. Vspäi 1896 zavottihe [[kivihil'|kivihilen]] samišt kaivuzil i [[Transsib]] läbiti žilod. Čerömhovo sai lidnan statusad vn 1917 3(16). päiväl kezakud.
 
-Lidn šingotase kivihilen samižel (avoin mahtuz) da küllästamižel, mehanižel tegimel, sauvondmaterialiden edheotandoil (kudomatomad materialad, [[tal'k]]an i [[dolomit]]an samine, pilindmaterialad), kebnal tegimištol (omblendfabrik i mebel'fabrik), mugažo leibkombinat radab.
+Čerömhovo šingotase kivihilen samižel (avoin mahtuz) da küllästamižel, mehanižel tegimel, sauvondmaterialiden edheotandoil (kudomatomad materialad, [[tal'k]]an i [[dolomit]]an samine, pilindmaterialad), kebnal tegimištol (omblendfabrik i mebel'fabrik), mugažo leibkombinat radab.
 
 == Geografijan andmused ==
 Lidn sijadase penen Čeremšank-jogen randoil ({{lang-ru|Черемшанка}}, [[Angar (jogi)|Angar-jogen]] hura ližajogi), 560 m ü.m.t. keskmäižel korktusel. Matkad [[Irkutsk]]hasai om 125 km suvipäivnouzmha orhal vai 145 km «Sibir'»-avtotedme (R-255). Lähembaine lidn om [[Svirsk]] 15 km päivnouzmha orhal. «Sibir'»-trass ümbärdab lidnad suvipäivlaskmaspäi 5 kilometras.
@@ -27,14 +27,23 @@ Lidn sijadase penen Čeremšank-jogen randoil ({{lang-ru|Черемшанка}},
 Čerömhovo om lidnümbrikon üks'jäine eländpunkt. Ühesa žilod mülüdas lidnha, ned sijadasoiš 4..7 kilometras.
 
 == Eläjad da ižanduz ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 52 647 ristitud. Kaikiš suremb lidnan ristitišt oli 124 tuhad eläjid vl 1956. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan jumalanpert' (om udessündutadud 2000-nzil vozil) i [[islam]]an pühäpert' (vspäi 2008) oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 52 647 ristitud. Kaikiš suremb lidnan ristitišt oli 124 tuhad eläjid vl 1956.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan jumalanpert' (om udessündutadud 2000-nzil vozil) i [[islam]]an pühäpert' (vspäi 2008) oma olmas lidnas.
 
 Professionaližen opendusen aluzkundad: Čerömhovon tegimištoližen industrijan da holitusen tehnikum, medicinine tehnikum, kaivuztehnine kolledž i pedagogine kolledž.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Бывшая Школа № 4 г. Черемхово.jpg|Korrekcine aluzškol-internat (2013, ende škol nomer 4)
+Cheremkhovo coal industry (WR).tif|Kivihilen samine Čerömhovonno vl 2001
+Черемхово ул. Некрасова.jpg|Torguindkeskused Nekrasovan irdal (2016)
+Дом культуры "Шахтёр".jpg|«Šahtör»-kul'turkeskuz (2018, ''Kaivai'')
+</gallery>
 
 == Irdkosketused ==
 * [http://admcher.ru/ Čerömhovo-lidnan tobmuden oficialine sait (''admcher.ru'').] {{ref-ru}}
 * [http://chertown.ru/ Čerömhovo-lidnan informacine portal (''chertown.ru'').] {{ref-ru}}
-
 {{Commons|Category:Cheremkhovo}}
 
 {{Irkutskan agjan lidnad}}
