--- a/Čerömhovo_(lidn).mw
+++ b/Čerömhovo_(lidn).mw
@@ -29,7 +29,7 @@ Lidn sijadase penen Čeremšank-jogen randoil ({{lang-ru|Черемшанка}},
 == Eläjad da ižanduz ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 52 647 ristitud. Kaikiš suremb lidnan ristitišt oli 124 tuhad eläjid vl 1956.
 
-[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan jumalanpert' (om udessündutadud 2000-nzil vozil) i [[islam]]an pühäpert' (vspäi 2008) oma olmas lidnas.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan jumalanpert'<ref>[http://sobory.ru/geo/locat/19964 Čerömhovon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (om udessündutadud 2000-nzil vozil) i [[islam]]an pühäpert' (vspäi 2008) oma olmas lidnas.
 
 Professionaližen opendusen aluzkundad: Čerömhovon tegimištoližen industrijan da holitusen tehnikum, medicinine tehnikum, kaivuztehnine kolledž i pedagogine kolledž.
 
@@ -40,6 +40,9 @@ Cheremkhovo coal industry (WR).tif|Kivihilen samine Čerömhovonno vl 2001
 Черемхово ул. Некрасова.jpg|Torguindkeskused Nekrasovan irdal (2016)
 Дом культуры "Шахтёр".jpg|«Šahtör»-kul'turkeskuz (2018, ''Kaivai'')
 </gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://admcher.ru/ Čerömhovo-lidnan tobmuden oficialine sait (''admcher.ru'').] {{ref-ru}}
