--- a/Orlova_Lübov'.mw
+++ b/Orlova_Lübov'.mw
@@ -1,5 +1,5 @@
 {{Personalii
-| изображение = Lyubov Orlova in 1945.jpg
+| изображение = Lyubov Petrovna Orlova.png
 | описание изображения = Lübov' Orlova valdkundaližen premijan znamanke vl 1945
 }}
 [[Fail:Ljubow Orłowa.JPG|thumb|left|250px|Lübov' Orlova «Cirk»-fil'mas, 1930-nded voded]]
