--- a/Sibirin_Usol'je.mw
+++ b/Sibirin_Usol'je.mw
@@ -14,12 +14,13 @@
  | Avtokod = 38. 85. 138
  | Aigvö = [[UTC]]+8 ([[MSK]]+5)
 }}
-'''Sibirin Usol'je''' ({{lang-ru|Усолье-Сибирское}}, {{lang-bua|Дабһан}}) om [[Venäma]]n lidn da lidnümbrik [[Irkutskan agj]]an suves. Se om agjan videnz' lidn eläjiden lugun mödhe, edel 2016 vot oli mugažo [[Usol'jen rajon (Irkutskan agj)|Usol'jen rajonan]] administrativižeks keskuseks (ei mülünd rajonha).
+[[Fail:Usolye Sibirskoye tram system.svg|thumb|left|250px|Lidnan kart tramvaijononke (2017)]]
+'''Sibirin Usol'je''' ({{lang-ru|Усолье-Сибирское}}, {{lang-bua|Дабһан}}) om [[Venäma]]n lidn da lidnümbrik [[Irkutskan agj]]an suves. Se om agjan videnz' lidn eläjiden lugun mödhe, edel 2016. vot oli mugažo [[Usol'jen rajon (Irkutskan agj)|Usol'jen rajonan]] administrativižeks keskuseks (ei mülünd rajonha).
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1669 [[keitandsol]]an purtkil kuti ''Usol'je'' jenisejalaižil Mihalövad-vellesed-[[kozakišt|kozakoil]]. Usol'je sai lidnan statusad vl 1925. Vspäi 1940 om nügüdläiženke nimenke erištamha Permin sätud [[Usol'je]]-lidnaspäi. Šingotaškanzihe himižen tegimišton keskuseks [[Toine mail'man soda|Suren sodan]] jäl'ghe, pästtihe bazižid substancijoid, silikonad, mašiništod päiväižbatarejiden täht.
 
-Lidn šingotase kaivuzmašiništon tegimel, farmaceftižen torhuden tegimel, «Baikal»-faneriž-virikombinatal, ratud kristalliden edheotandal, Usol'je-solredukurortal. Vodele 2017 travijad himižed edheotandad ei ole rados, om äi travijoid jändusid niišpäi.
+Sibirin Usol'je šingotase kaivuzmašiništon tegimel, farmaceftižen torhuden tegimel, «Baikal»-faneriž-virikombinatal, ratud kristalliden edheotandal, Usol'je-solredukurortal. Vodele 2017 travijad himižed edheotandad ei ole rados, om äi travijoid jändusid niišpäi, toksižed himižed tehmištlavuded oma likvidacijas.
 
 == Geografijan andmused ==
 Lidn sijadase [[Angar (jogi)|Angar-jogen]] hural randal (Bratskan vezivaradim), 440 m ü.m.t. keskmäižel korktusel. Matkad [[Irkutsk]]hasai om 66 km suvipäivnouzmha orhal, 79 km «Sibir'»-avtotedme vai [[Transsib]]al. Lähembaižed lidnad om [[Svirsk]] i [[Čerömhovo (lidn)|Čerömhovo]] 40 km lodeheze orhal vai 50 km avtotel i [[Angarsk]] 30 km suvipäivnouzmha keskushesai orhal i kaikil teil.
@@ -27,11 +28,22 @@ Lidn sijadase [[Angar (jogi)|Angar-jogen]] hural randal (Bratskan vezivaradim), 
 Sibirin Usol'je om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad da transport ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 83 327 ristitud. Kaikiš suremb ristitišt oli enamba 100 tuhad eläjid vll 1975−2001 (109 tuh. rist. vll 1985−1986). Ortodoksižen hristanuskondan ph. Mikulain jumalanpert', katoline naižjumalankodi (vspäi 2002) i islaman pühäpert' oma väges lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 83 327 ristitud. Kaikiš suremb ristitišt oli enamba 100 tuhad eläjid vll 1975−2001 (109 tuh. rist. vll 1985−1986).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulain jumalanpert', [[katoline jumalankodikund|katoline]] naižjumalankodi (vspäi 2002) i [[islam]]an pühäpert' oma väges lidnas.
 
 Professionaližen opendusen aluzkundad: Usol'jen industrialine i holitusen sferan tehnikumad, medicinine kolledž, Angarskan pedagogižen kolledžan filial, Irkutskan valdkundaližen tehnižen universitetan filial.
 
 Avtobusad, tramvaid da maršruttaksid oma kundaližeks transportaks lidnas. Ezilidnelektrojonused (päraudtestancii da koume platformad) i kezaližed jogilaivad ühtenzoittas Irkutskan aglomeracijan toižidenke lidnoidenke.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+М53.JPG|«Sibir'»-avtote (R255) läbitab lidnad (2015)
+Usolye-Sibirskoye radar 04.jpg|Kaičendministrusen radiolokacine «Voronež-M»-stancii (2016)
+Filial IrGTU in Usolie-Sibirskoe.jpg|Irkutskan valdkundaližen tehnižen universitetan filial (2009)
+Usolye-Sibirskoye tram extension construction (32146303490).jpg|Tramvaid i torguindkeskuz (2009)
+Railstation Ussolie-Sibirskoye.jpg|Sibirin Usol'je-päraudtestancijan sauvuz vl 2021
+</gallery>
 
 == Irdkosketused ==
 * [http://duma.usolie-sibirskoe.ru/ Lidnan Duman oficialine sait (''duma.usolie-sibirskoe.ru'').] {{ref-ru}}
