--- a/Sibirin_Usol'je.mw
+++ b/Sibirin_Usol'je.mw
@@ -30,7 +30,7 @@ Sibirin Usol'je om lidnümbrikon üks'jäine eländpunkt.
 == Eläjad da transport ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 83 327 ristitud. Kaikiš suremb ristitišt oli enamba 100 tuhad eläjid vll 1975−2001 (109 tuh. rist. vll 1985−1986).
 
-[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulain jumalanpert', [[katoline jumalankodikund|katoline]] naižjumalankodi (vspäi 2002) i [[islam]]an pühäpert' oma väges lidnas.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan Toižetamižen jumalanpert'<ref>[http://sobory.ru/geo/locat/19956 Sibirin Usol'jen pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (letihe vll 1994−2016) i puine ph. Mikulai-čudonsädajan jumalanpert' (om saudud vll 2006−2008), [[katoline jumalankodikund|katoline]] naižjumalankodi (vspäi 2002) i [[islam]]an pühäpert' oma väges lidnas.
 
 Professionaližen opendusen aluzkundad: Usol'jen industrialine i holitusen sferan tehnikumad, medicinine kolledž, Angarskan pedagogižen kolledžan filial, Irkutskan valdkundaližen tehnižen universitetan filial.
 
@@ -44,6 +44,9 @@ Filial IrGTU in Usolie-Sibirskoe.jpg|Irkutskan valdkundaližen tehnižen univers
 Usolye-Sibirskoye tram extension construction (32146303490).jpg|Tramvaid i torguindkeskuz (2009)
 Railstation Ussolie-Sibirskoye.jpg|Sibirin Usol'je-päraudtestancijan sauvuz vl 2021
 </gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://duma.usolie-sibirskoe.ru/ Lidnan Duman oficialine sait (''duma.usolie-sibirskoe.ru'').] {{ref-ru}}
