--- a/Langepas.mw
+++ b/Langepas.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 43,534
  | Voz' = 2017
  | Pind = 59.51
- | Fail = Утро 26 апреля 2011 г. в Лангепасе.jpg
+ | Fail = Лангепас в августе 2012 (33523244243).jpg
  | Pämez' = Boris Surcev<br />(sulaku 2014—)
  | Telefonkod = +7-34669-xx-xxx
  | Avtokod = 86. 186
@@ -27,6 +27,7 @@ Lidn sijadase [[Ob'|Obin]] oiktan Langepas- (vai Kajukovan, {{lang-ru|Каюко
 Langepas om lidnümbrikon üks'jäine eländpunkt. Lidn sauvose avaros, generaližen planan mödhe ezmässai, kogoneb 10 mikrorajonaspäi da Suvifartalaspäi.
 
 == Eläjad ==
+[[Fail:Гимназия №6.jpg|thumb|left|250px|Lidnan gimnazii nomer 6 (2011)]]
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 41 670 ristitud. Kaikiš suremb ristitišt om nügüd'.
 
 Rahvahad (enamba 1% vl 2010): [[venälaižed]] — 60,2%, [[totarlaižed]] — 9,9%, [[ukrainalaižed]] — 7,3%, [[vaugedvenälaižed]] — 6,4%, [[tadžikalaižed]] — 2,9%, [[baškiralaižed]] — 2,4%, [[lezgilaižed]] — 1,4%, [[azerbaidžanlaižed]] — 1,2%, [[uzbekad]] — 1,0%, toižed rahvahad — 7,3%.
