*Empty MediaWiki Message*

--- a/Koume_idiotad.mw
+++ b/Koume_idiotad.mw
@@ -28,7 +28,7 @@
  | imdb_id      = 1187043
  | kp_id        = 423210
 }}
-'''«Koume idiotad»''' ({{lang-hi|थ्री इडीयट्स}} ''Tree aaidijets'', {{lang-en|3 idiots}}) om vn 2009 [[Indii|indine]] kinokomedii.
+'''«Koume idiotad»''' ({{lang-hi|थ्री इडीयट्स}} ''Thri aaidijets'', {{lang-en|3 idiots}}) om vn 2009 [[Indii|indine]] kinokomedii.
 
 == Rolid ==
 * ''Rančodas «Rančo» Šamaldas Čančad / Funšuk Vandu'' — [[Han Amir|Amir Han]]
