--- a/Kogalim.mw
+++ b/Kogalim.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 64,704
  | Voz' = 2017
  | Pind = 153.5
- | Fail = Здание администрации города.jpg
+ | Fail = Панорама Когалыма с моста - panoramio.jpg
  | Pämez' = Nikolai Pal'čikov<br />(sulaku 2013—)
  | Telefonkod = +7-34667-xx-xxx
  | Avtokod = 86. 186
@@ -29,9 +29,23 @@ Klimat om kontinentaline. Heinkun lämuz om +17,1 C°, vilukun — −18,4 C°. 
 Ortjagun-žilo (142 rist. vl 2017) mülüb lidnümbrikho Kogaliman ližaks. Lidnfartaliden pind om läz 35 km².
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 58 181 ristitud, lidnümbrikon — 58 337 ristitud. Kaikiš suremb lidnan ristitišt om nügüd'. Vl 2017 kaik 64 846 ristitud elihe lidnümbrikos. Ortodoksižen hristanuskondan kaks' pühäpertid, protestantizman jumalanpert' (videnkümnenden päivän polenpidajad) i islamanuskojiden mečet' oma saudud lidnha.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 58 181 ristitud, lidnümbrikon — 58 337 ristitud. Kaikiš suremb lidnan ristitišt om nügüd'. Vl 2017 kaik 64 846 ristitud elihe lidnümbrikos.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid<ref>[http://sobory.ru/geo/distr/3129 Kogaliman pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref>, [[protestantizm]]an jumalanpert' (videnkümnenden päivän polenpidajad) i [[islam]]anuskojiden mečet' oma saudud lidnha.
 
 Rahvahad (lidn, enamba 0,8% vl 2010): [[venälaižed]] — 57,8%, [[ukrainalaižed]] — 10,0%, [[totarlaižed]] — 9,2%, [[azerbaidžanlaižed]] — 3,8%, [[baškiralaižed]] — 3,7%, [[kumikad]] — 2,1%, [[moldovalaižed]] — 1,7%, [[čečenalaižed]] — 1,6%, [[čuvašalaižed]] — 1,1%, [[avarad]] — 1,0%, [[vaugedvenälaižed]] — 0,9%, [[marilaižed]] — 0,9%, [[lezgilaižed]] — 0,9%, toižed rahvahad — 4,8%, rahvahuden ozutandata — 0,5%.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Здание администрации города.jpg|Lidnan administracijan sauvuz (2011)
+Church in Kogalym.jpg|Pühän Jumalanmaman Emäganpäivän jumalanpert', vn 2005 nägu (om saudud vll 1995−1998)
+Центр исследований керна и пластовых флюидов, г. Когалым.jpg|Kernan i šoiduiden flüidoiden tedoiduzkeskuz (2013)
+Kogalym train station (tracks).jpg|Ted Kogalim-päraudtestancijal vl 2010
+Airport Kogalym.jpg|Kogalim-lendimport vl 2005
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://admkogalym.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admkogalym.ru'').] {{ref-ru}}
