--- a/Jugorsk.mw
+++ b/Jugorsk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 37,150
  | Voz' = 2017
  | Pind = 15
- | Fail = МиГ в Югорске.jpg
+ | Fail = Туча - panoramio (2).jpg
  | Pämez' = Andrei Borodkin<br />(heinku 2018—)
  | Telefonkod = +7-34675-xx-xxx
  | Avtokod = 86. 186
@@ -32,6 +32,15 @@ Jugorsk om lidnümbrikon üks'jäine eländpunkt. Lidnümbrikon pind — 152,18 
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 34 067 ristitud. Kaikiš suremb lidnan ristitišt om nügüd'. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Sergii Radonežalaižen päjumalanpert' om saudud lidnha vll 1995−2001, sen ližaks časoun' om olmas kahesan pühämehen kuvanke.
 
 Jugorskan politehnine kolledž<ref>[http://www.yugorskpk.ru/ Jugorskan politehnižen kolledžan sait (''yugorskpk.ru'').] {{ref-ru}}</ref> i [[Gazprom]]an openduztegimištoline keskuz oma professionaližen opendusen aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Steam monument (Yugorsk).JPG|Puruvedim-muštnik raudtesauvojile (2010)
+Saint Sergius of Radonezh church (Yugorsk).JPG|Ph. Sergii Radonežalaižen jumalanpert', vn 2010 nägu
+Office gazprom transgaz yugorsk.jpg|«[[Gazprom]] Transgaz Jugorsk»-edheotandan päfater vl 2012
+МиГ в Югорске.jpg|[[MiG-31]]-lendim muštnikaks (2015)
+Дым - panoramio (1).jpg|Geologičeskai-päraudtestancii vl 2010
+</gallery>
 
 == Homaičendad ==
 <references />
