--- a/Belojarskii_(lidn).mw
+++ b/Belojarskii_(lidn).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 20,142
  | Voz' = 2017
  | Pind = 72.15
- | Fail =
+ | Fail = Beloyarsky (7) 24.jpg
  | Pämez' = Vladimir Vasik<br />(sügüz'ku 2013—)
  | Telefonkod = +7-34670-xx-xxx
  | Avtokod = 86. 186
@@ -29,11 +29,23 @@ Klimat om kontinentaline. Voden keskmäine lämuz — −2,0 C°, vilukun lämuz
 Belojarskii om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 20 283 ristitud, rajonan kaks' koumandest. Kaikiš suremb lidnan ristitišt om 20 tuh. eläjid da sen enamba vspäi 2007 (20 282 rist. vl 2016). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om olmas lidnas: ph. Serafim Sarovalaižen (2003) i Kaikiden pühämehiden (2017).
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 20 283 ristitud, rajonan kaks' koumandest. Kaikiš suremb lidnan ristitišt om 20 tuh. eläjid da sen enamba vspäi 2007 (20 282 rist. vl 2016).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om olmas lidnas: ph. Serafim Sarovalaižen (2003) i Kaikiden pühämehiden (2017).
 
 Rahvahad (enamba 0,5% vl 2010): [[venälaižed]] — 68,7%, [[ukrainalaižed]] — 8,2%, [[totarlaižed]] — 5,3%, [[hantilaižed]] — 2,7%, [[vaugedvenälaižed]] — 1,8%, [[kumikad]] — 1,7%, [[baškiralaižed]] — 1,6%, [[kirgizlaižed]] — 1,2%, [[armenijalaižed]] — 0,6%, [[čuvašalaižed]] — 0,6%, [[tabasaranalaižed]] — 0,5%, toižed rahvahad — 4,8%, rahvahuden ozutandata — 2,3%.
 
 Belojarskijan politehnine kolledž<ref>[http://beltek-bpk.ru/ Belojarskijan politehnižen kolledžan sait (''beltek-bpk.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Beloyarsky (63) 21.jpg|Belojarskijan rajonan administracijan sauvuz (2021)
+Храме преподобного Серафима Саровского в городе Белоярский.jpg|Ph. Serafim Sarovalaižen jumalanpert', vn 2010 nägu
+Beloyarsky (63) 24.jpg|«Rostelekom:an» Hantin da Mansin filialan palakundan sauvuz (2021)
+Beloyarsky (63) 04.jpg|Üks' torguindkeskusišpäi (2021)
+Beloyarsky (63) 23.jpg|Kul'turan da lebun «Kamerton»-keskuz (2021)
+Beloyarsky (1) 04.jpg|Belojarskii-aerovagzalan sauvuz, vn 2021 nägu
+</gallery>
 
 == Homaičendad ==
 <references />
