--- a/Läntor.mw
+++ b/Läntor.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Läntor<br />Лянтор
- | Lidnanznam = Coat of Arms ofLyantor.jpg
- | Flag = Flag of Lyantor (Khanty-Mansyisky AO).png
+ | Lidnanznam = Lyantor COA (2006).gif
+ | Flag = Flag of Lyantor (Yugra).png
  | Lidnanznam text = Läntoran lidnanznam
  | Flag text = Läntoran flag
  | Valdkund = Venäma
@@ -31,7 +31,10 @@ Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 38 992 rist
 
 Rahvahad (enamba 0,8% vl 2010): [[venälaižed]] — 51,4%, [[totarlaižed]] — 9,8%, [[ukrainalaižed]] — 8,1%, [[baškiralaižed]] — 4,1%, [[kumikad]] — 3,5%, [[tadžikalaižed]] — 2,4%, [[azerbaidžanlaižed]] — 2,0%, [[čuvašalaižed]] — 1,7%, [[čečenalaižed]] — 1,4%, [[lezgilaižed]] — 1,2%, [[nogailaižed]] — 1,1%, [[uzbekad]] — 1,1%, [[armenijalaižed]] — 0,8%, [[kazahlaižed]] — 0,8%, toižed rahvahad — 6,6%, rahvahuden ozutandata — 4,0%.
 
-Läntoran kivivointehnikum (Jugran valdkundaližen universitetan filial) om professionaližen opendusen aluzkundaks.
+Läntoran kivivointehnikum<ref>[http://lnt.ugrasu.ru/ Läntoran kivivointehnikuman sait (''lnt.ugrasu.ru'').] {{ref-ru}}</ref> (Jugran valdkundaližen universitetan filial) om professionaližen opendusen aluzkundaks.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.admlyantor.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admlyantor.ru'').] {{ref-ru}}
