--- a/Urai.mw
+++ b/Urai.mw
@@ -27,9 +27,20 @@ Lidn sijadase tazangištol, igähižen rougun zonas i sen röunanno, [[Kond (Irt
 Urai om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 39 457 ristitud. Kaikiš suremb lidnan ristitišt oli 43 224 eläjad vl 2009. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Sündundpäivän pühäpert' om saudud lidnha vll 1999−2001.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 39 457 ristitud. Kaikiš suremb lidnan ristitišt oli 43 224 eläjad vl 2009.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Sündundpäivän pühäpert'<ref>[http://sobory.ru/geo/distr/1569 Urain pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud lidnha vll 1999−2001, ph. Aleksandr Nevskijan jumalanpert' om letud vll 2000−2001.
 
 Urain politehnine kolledž om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Г.Урай.jpg|Lidnan bobuštuzpark vl 2016
+Урай. Авиацентр..jpg|Aviakeskuz (2006)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://uray.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''uray.ru'').] {{ref-ru}}
