--- a/Hanti-Mansiisk.mw
+++ b/Hanti-Mansiisk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Hanti-Mansiiskan lidnanznam
  | Flag text = Hanti-Mansiiskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 98,485
- | Voz' = 2018
+ | Eläjiden lugu = 103,117
+ | Voz' = 2021
  | Pind = 337.76
  | Fail = Chekhova Street Khanty-Mansiysk.jpg
  | Pämez' = Maksim Räšin<br />(semendku 2011—)
@@ -29,14 +29,31 @@ Klimat om kontinentaline. Tal'v om vilu, se jätktase pol'vot. Keza om läm'. Vo
 Hanti-Mansiisk om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vl 1939 žilon ristitišt oli 7 500 eläjad. Vn 2010 kaiken Venäman rahvahanlugemižen mödhe Hanti-Mansiiskan eläjiden lugu oli 80 151 ristitud. Kaikiš suremb lidnan ristitišt oli 98 692 eläjad vl 2017.
+Vl 1939 žilon ristitišt oli 7 500 eläjad. Vn 2010 kaiken Venäman rahvahanlugemižen mödhe Hanti-Mansiiskan eläjiden lugu oli 80 151 ristitud. Kaikiš suremb lidnan ristitišt om nügüd'.
 
 Rahvahad (enamba 0,5% vl 2010): [[venälaižed]] — 69,9%, [[totarlaižed]] — 5,0%, [[hantilaižed]] — 3,7%, [[ukrainalaižed]] — 3,0%, [[tadžikalaižed]] — 1,9%, [[azerbaidžanlaižed]] — 1,9%, [[mansilaižed]] — 1,5%, [[kirgizlaižed]] — 1,3%, [[uzbekad]] — 1,1%, [[saksalaižed]] — 0,7%, [[baškiralaižed]] — 0,5%, toižed rahvahad — 5,3%, rahvahuden ozutandata — 4,2%.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Sündun Eläbzdusen kafedraline päjumalanpert'<ref>[http://sobory.ru/geo/locat/3914 Hanti-Mansiiskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (om saudud vll 2001−2004), nell' jumalanpertid i časoun', [[protestantizm]]an «Toižetamine»-loičendpert' i [[islam]]an pühäpert' oma olmas lidnas.
 
 == Transport ==
 Avtobusad oma kundaližeks transportaks lidnas. Kezaaigan jogistancii radab. Avtotesild om olmas Irtiš-joges päliči, se om saudud vodele 2004. Lähembaine raudte mäneb 250 kilometras päivnouzmha ([[Pit' Jah]]), suvhe i lodeheze ([[Nägan']]).
 
 Rahvahidenkeskeine civiline lendimport (latin. ''HMA'' / kirill. ''ХАС'') sijadase 5 km pohjoižpäivnouzmha lidnan keskusespäi. Tehtas reisid [[Moskv]]ha, [[Uf]]aha, Venäman lähembaižihe järedoihe lidnoihe i Jugradme, mugažo sezonreisid [[Mustmeri|Mustmeren]] lebutahoiže i sijaližid reisid punolendimil.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Khanty-Mansiysk, Khanty-Mansi Autonomous Okrug, Russia - panoramio (8).jpg|Lidnan ohjastusen aluzkundoiden sauvuz öližel aigal (2011)
+Музей Природы и Человека ХМ.jpg|Londusen i ristitun muzei (2006)
+Church of the resurrection of Christ in Khany-Mansiysk.JPG|Sündun Eläbzdusen kafedraline päjumalanpert', vn 2007 nägu
+Temple of Veil of the Most Holy Mother of God.JPG|Jumalanmaman Katken pühäpert', vn 2010 nägu (om saudud vll 1996−2000)
+Khanty-Mansiysk theater.JPG|Hanti-Mansiiskan teatr vl 2006
+Ugrasu glavnii korpus.JPG|Jugran valdkundaline universitet, päkorpus (2011)
+Arena Ugra front2.jpg|«Arena Jugra» (2017)
+Khanty-Mansiysk biathlon center 3.jpg|Biatlonkeskuz (2009)
+Мост через Иртыш.JPG|Avtotesild Irtišas päliči vl 2007 (om saudud vodele 2004)
+Reka-LR.jpg|Jogistancii vl 2014
+Аэродромы и терминалы-терминал, Ханты-Мансийск RP18943.jpg|Hanti-Mansiisk-lendimportan terminalad vl 2010
+</gallery>
 
 == Homaičendad ==
 <references />
