--- a/Megion.mw
+++ b/Megion.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 48,283
  | Voz' = 2017
  | Pind = 50.51
- | Fail = Temple megion.jpg
+ | Fail = Общий вид города Мегион.jpg
  | Pämez' = Oleg Deineka<br />(reduku 2015—)
  | Telefonkod = +7-34643-xx-xxx
  | Avtokod = 86. 186
@@ -31,11 +31,23 @@ Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 49 4
 
 Rahvahad (enamba 0,8% vl 2010): [[venälaižed]] — 62,4%, [[ukrainalaižed]] — 7,4%, [[totarlaižed]] — 7,1%, [[baškiralaižed]] — 3,5%, [[azerbaidžanlaižed]] — 1,7%, [[lezgilaižed]] — 1,2%, [[kumikad]] — 1,0%, [[čečenalaižed]] — 0,9%, [[moldovalaižed]] — 0,8%, [[vaugedvenälaižed]] — 0,8%, [[čuvašalaižed]] — 0,8%, toižed rahvahad — 4,6%, rahvahuden ozutandata — 7,8%.
 
-Megionan politehnine kolledž om professionaližen opendusen aluzkundaks.
+Megionan politehnine kolledž<ref>[http://megpk.ru/ Megionan politehnižen kolledžan sait (''megpk.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Megion Monument to Pioneers.jpg|Monument edelmatkajile vl 2019
+Мегионский сквер.jpg|Pühän Jumalanmaman Katken jumalanpert', muštnik sadud kivivoin 500-millionižele tonnale i skver senno, vn 2020 nägu
+Памятник героям прошедших войн на Аллее Славы.jpg|Muštnik männuziden sodoiden vägimehile vl 2020
+Megion severyanka.jpg|Megionan nägu vl 2008
+Стела на въезде в город.jpg|Znam avtoterenghas lidnan röunal (om pandud vl 2019)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://dumamegion.ru/ Lidnan Duman oficialine sait (''dumamegion.ru'').] {{ref-ru}}
-* [http://www.admmegion.ru/ Lidnan Administracijan oficialine sait (''admmegion.ru'').] {{ref-ru}} {{ref-en}} <small>(+ äikel'ne känduz)</small>
+* [http://www.admmegion.ru/ Lidnan Administracijan oficialine sait (''admmegion.ru'').] {{ref-ru}} {{ref-en}} <small>''(+ äikel'ne känduz)''</small>
 {{Commons|Category:Megion}}
 
 {{Hantin da Mansin avtonomižen ümbrikon lidnad}}
